fixed margin-bottom error on tip

--- a/extension/tip.html
+++ b/extension/tip.html
@@ -9,8 +9,8 @@
     <title>Document</title>
 </head>
 <body>
-  <div id="cardContainer">
-    <div class="row">
+  <div id="cardContainer" style="margin: 0">
+    <div class="row" style="margin: 0">
       <div class="col l5 s12 m8" style="padding: 0">
         <div class="card purple darken-2" style="margin: 0" id="truthCard">
           <div class="card-content grey-text text-lighten-4">
