branding + hostname matching

--- a/extension/tip.html
+++ b/extension/tip.html
@@ -74,7 +74,7 @@
                               <input type="text" name="shortText" id="shortText" class='input-field' placeholder="Try to be brief, 5-7 words">
                               <label for="det">Details</label>
                               <textarea name="details" id="det" class="materialize-textarea" style="height: 100px" placeholder="Add as much detail as you like here. Links appreciated!"></textarea>
-                              <button type="submit" class="btn purple darken-2 waves-effect waves-light">Submit</button>
+                              <button type="submit" class="btn purple darken-2 waves-effect waves-light" id="submitButton">Submit</button>
                               <button id="cancelButton" type='reset' class="btn purple darken-2 waves-effect waves-light">Cancel</button>
                           </form>
                       </div>
